name:                redo-haskell
version:             0.1.0.0
synopsis:            implementation of djb's redo
description:         Please see README.md
homepage:            https://github.com/dinkelk/redo
bug-reports:         https://github.com/dinkelk/redo/issues
license:             MIT
license-file:        LICENSE
author:              Kevin Dinkel
maintainer:          dinkelk@gmail.com
copyright:           2015 Kevin Dinkel
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable redo-haskell
  main-is:             Main.hs
  other-modules:  Build Database DatabaseEntry FilePathUtil JobServer PrettyPrint Types UpToDate
  other-extensions:    StandaloneDeriving, ScopedTypeVariables, CPP
  build-depends:       base, containers, directory, filepath, process, time, bytestring, unix, cryptohash, hex, ansi-terminal, random, filelock
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:              git 
  location:          git@github.com:dinkelk/redo.git
